refactor: use `manifest.webmanifest` instead of `manifest.aspx`

--- a/frontend/app.html
+++ b/frontend/app.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="hsl(0, 0%, 14%)" media="(prefers-color-scheme: dark)" />
   <meta name="theme-color" content="hsl(122, 39%, 40%)" />
   <link rel="icon" href="./lib/assets/icon.svg" type="image/svg+xml" />
-  <link rel="manifest" href="./manifest.aspx" />
+  <link rel="manifest" href="./manifest.webmanifest" />
   %raweb.head%
 </head>
 
