fix: use vite config base url instead of hardcoding

--- a/frontend/app.html
+++ b/frontend/app.html
@@ -5,11 +5,11 @@
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover"
   />
   <title>RAWeb</title>
-  <link rel="stylesheet" href="./lib/winui.css" />
+  <link rel="stylesheet" href="%raweb.base%/lib/winui.css" />
   <meta name="theme-color" content="hsl(0, 0%, 14%)" media="(prefers-color-scheme: dark)" />
   <meta name="theme-color" content="hsl(122, 39%, 40%)" />
-  <link rel="icon" href="./lib/assets/icon.svg" type="image/svg+xml" />
-  <link rel="manifest" href="./manifest.webmanifest" />
+  <link rel="icon" href="%raweb.base%/lib/assets/icon.svg" type="image/svg+xml" />
+  <link rel="manifest" href="%raweb.base%/manifest.webmanifest" />
   %raweb.head%
 </head>
 
@@ -19,7 +19,7 @@
   <div class="root-splash-wrapper">
     <div class="root-titlebar">
       <div class="left">
-        <img src="./lib/assets/icon.svg" alt="" class="logo" />
+        <img src="%raweb.base%lib/assets/icon.svg" alt="" class="logo" />
         <span class="title">RAWeb</span>
       </div>
       <div class="right"></div>
