feat: add support for css and js overrides to the web app
Administrators may now place `index.css` and `index.js` in the `App_Data/inject` folder. When they are present, they will be referenced by the web app.

These can be used to customize RAWeb's style or inject custom functionality. RAWeb will serve any file in the `App_Data/inject` folder.

--- a/frontend/app.html
+++ b/frontend/app.html
@@ -281,7 +281,7 @@
       })();
     </script>
 
-    %raweb.scripts%
+    %raweb.scripts% %raweb.overrides%
 
     <script type="module" src="https://get.microsoft.com/badge/ms-store-badge.bundled.js"></script>
   </body>
